# EDLUT_BAXTER

./: README.md
EDLUT_source_code/: flags.makefile.in  makefile.in  rules.makefile.in  static-variables.makefile
EDLUT_source_code/include/: cudaError.h
EDLUT_source_code/include/communication/: ArrayInputCurrentDriver.h  FileInputCurrentDriver.h  InputCurrentDriver.h
EDLUT_source_code/include/integration_method/: BDFn.h  BDFn_GPU.h  BDFn_GPU2.h  BiFixedStep.h  BiFixedStep_GPU.h  BiFixedStep_GPU2.h  Bifixed_BDFn.h  Bifixed_Euler.h  Bifixed_Euler_GPU.h  Bifixed_Euler_GPU2.h  Bifixed_RK2.h  Bifixed_RK2_GPU.h  Bifixed_RK2_GPU2.h  Bifixed_RK4.h  Bifixed_RK4_GPU.h  Bifixed_RK4_GPU2.h  Euler.h  Euler_GPU.h  Euler_GPU2.h  FixedStep.h  FixedStep_GPU.h  FixedStep_GPU2.h  IntegrationMethod.h  IntegrationMethod_GPU.h  IntegrationMethod_GPU2.h  LoadIntegrationMethod_GPU.h  RK2.h  RK2_GPU.h  RK2_GPU2.h  RK4.h  RK4_GPU.h  RK4_GPU2.h
EDLUT_source_code/include/interface/: C_interface_for_robot_control.h
EDLUT_source_code/include/learning_rules/: AdditiveKernelChange.h  ConnectionState.h  ExpOptimisedBufferedWeightChange.h  LearningRule.h  STDPState.h  STDPWeightChange.h  WithPostSynaptic.h  WithoutPostSynaptic.h
EDLUT_source_code/include/neuron_model/: CompressNeuronModelTable.h  CompressSynchronousTableBasedModel.h  CompressTableBasedModel.h  EventDrivenInputDevice.h  EventDrivenNeuronModel.h  InputCurrentNeuronModel.h  InputSpikeNeuronModel.h  LIFTimeDrivenModel_1_1.h  LIFTimeDrivenModel_1_1_GPU.h  LIFTimeDrivenModel_1_1_GPU2.h  LIFTimeDrivenModel_1_2.h  LIFTimeDrivenModel_1_2_GPU.h  LIFTimeDrivenModel_1_2_GPU2.h  LIFTimeDrivenModel_1_4.h  LIFTimeDrivenModel_1_4_GPU.h  LIFTimeDrivenModel_1_4_GPU2.h  NeuronModel.h  NeuronModelTable.h  SynchronousTableBasedModel.h  TableBasedModel.h  TimeDrivenInputDevice.h  TimeDrivenModel.h  TimeDrivenNeuronModel.h  TimeDrivenNeuronModel_GPU.h  TimeDrivenNeuronModel_GPU2.h  TimeDrivenSinCurrentGenerator.h  VectorBufferedState.h  VectorNeuronState.h  VectorNeuronState_GPU.h  VectorNeuronState_GPU2.h
EDLUT_source_code/include/openmp/: openmp.h
EDLUT_source_code/include/simulation/: Configuration.h  Event.h  MediananFilter.h  ParamReader.h  RandomGenerator.h  SaveWeightsEvent.h  Simulation.h
EDLUT_source_code/include/spike/: Current.h  EDLUTException.h  EDLUTFileException.h  EndRefractoryPeriodEvent.h  InputCurrent.h  Interconnection.h  Network.h  Neuron.h
EDLUT_source_code/src/: EDLUTKernel.cpp  Feedback_control_loop_1_joint.cpp  Feedback_control_loop_VOR.cpp  SimulatedRobotControl.cpp
EDLUT_source_code/src/communication/: ArrayInputCurrentDriver.cpp  ArrayInputSpikeDriver.cpp  FileInputCurrentDriver.cpp  FileInputSpikeDriver.cpp  FileOutputSpikeDriver.cpp  InputBooleanArrayDriver.cpp  TCPIPInputOutputSpikeDriver.cpp  TCPIPInputSpikeDriver.cpp
EDLUT_source_code/src/integration_method/: BDFn_GPU.cu  BiFixedStep.cpp  BiFixedStep_GPU.cu  Bifixed_Euler_GPU.cu  Bifixed_RK2_GPU.cu  (+8 more)
config_files/neuron_models/: _LIFTimeDriven_DCN_1_4_RK4.cfg  _LIFTimeDriven_Granule_1_1_RK2_4MF.cfg  _LIFTimeDriven_Purkinje_1_1_RK4.cfg
config_files/trajectory_data_circle/: Network_6_joints_10MF_per_RBF_4MF_per_GrC_CIRCLE_NEW_LEARNING_RULE.cfg  horizontalCircle_1000samples_2seconds_r12_position.txt  horizontalCircle_1000samples_2seconds_r12_velocity.txt  horizontalCircle_1000samples_2seconds_r12_xyz.txt
config_files/trajectory_data_eight/: Network_6_joints_10MF_per_RBF_4MF_per_GrC_EIGHT_LOOP_NEW_LEARNING_RULE.cfg  eightTrajectory_1000samples_2seconds_r12_position.txt  eightTrajectory_1000samples_2seconds_r12_velocity.txt  eightTrajectory_1000samples_2seconds_r12_xyz.txt
config_files/trajectory_data_targetReaching/: Network_6_joints_10MF_per_RBF_4MF_per_GrC_TARGET_REACHING_NEW_LEARNING_RULE.cfg  Weights_6_joints_10MF_per_RBF_4MF_per_GrC_TARGET_REACHING.cfg  positions_target_reaching_1_0s_0_0s.txt  target_reaching_xyz.txt  velocity_target_reaching_1_0s_0_0s.txt
edlut_ros_ws/src/edlut_ros/: CMakeLists.txt  package.xml
edlut_ros_ws/src/edlut_ros/cfg/: DynParameters.cfg  DynParameters_2Entries.cfg  MaeDynParameters.cfg  SynchronizerDynParameters.cfg  WeightsDynParameters.cfg
edlut_ros_ws/src/edlut_ros/include/edlut_ros/: BaxterTrajectoryController.h  EnableRobot.h  ExternalClock.h  PDSupervisor.h  Q_TrajectoryController.h  Q_TrajectoryControllerRandom.h  Q_TrajectoryGenerator.h  Q_TrajectoryGeneratorRandom.h  ROSErrorCalculatorCompact.h  ROSPoissonGenerator.h  ROSRBFBank_delay.h  ROSSpikeDecoderCompact.h  ROSTopicInputDriver.h  ROSTopicOutputDriver.h  ROSTorqueCalculatorAddition.h  SinTrajectoryGenerator.h  SynchronizerDynParams.h
edlut_ros_ws/src/edlut_ros/launch/: circle_trajectory.launch  eight_trajectory.launch  position_control_mode_circle_trajectory.launch  position_control_mode_eight_trajectory.launch  position_control_mode_target_reaching.launch  target_reaching.launch
edlut_ros_ws/src/edlut_ros/msg/: Analog.msg  AnalogCompact.msg  LearningState.msg  Spike.msg  Spike_group.msg
edlut_ros_ws/src/edlut_ros/src/: BaxterTrajectoryController.cpp  MAE_Plot_1s.py  PDSupervisor.cpp  Q_TrajectoryController.cpp  Q_TrajectoryControllerRandom.cpp  Q_TrajectoryGenerator.cpp  Q_TrajectoryGeneratorRandom.cpp  ROSErrorCalculatorCompact.cpp  ROSPoissonGenerator.cpp  ROSRBFBank_delay.cpp  ROSSpikeDecoderCompact.cpp  ROSTopicInputDriver.cpp  ROSTopicOutputDriver.cpp  ROSTorqueCalculatorAddition.cpp  RasterPlot.py  RasterPlot_2Entries.py  RasterPlot_and_AnalogSignal.py  SinTrajectoryGenerator.cpp  SynchronizerDynParams.cpp  TrajectoryPlot2.py  baxter_arm_state_node_sync.cpp  baxter_position_command_node.cpp  baxter_torque_command_node.cpp  delay_analog_node.cpp  error_estimator_node_compact.cpp  gazebo_control_node.cpp  median_filter_node.cpp  pd_supervisor_node.cpp  poisson_generator_node_delay_compact.cpp  q_trajectory_generator_node.cpp  q_trajectory_generator_node_random.cpp  rbf_node_sync_delay.cpp  robot_enabler_node.py  simulator_node2.cpp  spike_decoder_node_compact.cpp  synchronizer_node.cpp  torque_addition_node.cpp  trajectory_from_file.py  xyz_publisher.py
(+55 files in other folders)
